evidence/week4/task-8-comment.txt
=== cargo check --tests ===
    Checking blog-api v0.1.0 (/home/reky/college/integrative-programming/week3/blog-api)
error[E0308]: mismatched types
   --> tests/logging_test.rs:46:28
    |
 46 |     create_test_post(&app, &token, "Smoke Test Post", "Content").await;
    |     ----------------       ^^^^^^ expected `&str`, found `&AuthTokens`
    |     |
    |     arguments to this function are incorrect
    |
    = note: expected reference `&str`
               found reference `&AuthTokens`
note: function defined here
   --> tests/common/mod.rs:174:14
    |
174 | pub async fn create_test_post(app: &TestApp, token: &str, title: &str, content: &str) -> Value {
    |              ^^^^^^^^^^^^^^^^                -----------

For more information about this error, try `rustc --explain E0308`.
error: could not compile `blog-api` (test "logging_test") due to 1 previous error
cargo build (0 crates compiled)
[full output: ~/.local/share/rtk/tee/1776777776_cargo_check.log]

=== cargo clippy --lib -- -D warnings ===
cargo clippy: No issues found

=== cargo clippy --test comment_test -- -D warnings ===
cargo clippy: No issues found

=== grep Forbidden count ===
2 matches in 2F:

[file] 159 (1):
     0: :Forbidden(

[file] 198 (1):
     0: :Forbidden(

=== grep Unauthorized count ===
0 matches for 'Unauthorized'
=== grep ensure_post_exists ===
3 matches in 2F:

[file] 41 (1):
     0: &sqlx::MySqlPool, post_id: i32) -> Result<(), AppError> {

[file] src/handler/comment.rs (2):
    59: ensure_post_exists(&state.db, post_id).await?;
    95: ensure_post_exists(&state.db, post_id).await?;

=== grep PaginationQuery ===
2 matches in 2F:

[file] 12 (1):
     0: :schema::pagination::PaginationQuery;

[file] 57 (1):
     0: Query<PaginationQuery>,

